--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-QEFWeb - A GUI Web Front-End to execute and manage Query Execution Plans.
+QEFWeb - A GUI Web Front-End to execute and manage Query Execution Plans using QEF (see https://github.com/regispires/qef).
+
