changed some texts in views and README

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-QEFWeb - A GUI Web Front-End to execute and manage Query Execution Plans using QEF (see https://github.com/regispires/qef).
+QEFWeb - A GUI Web Front-End to execute and manage Query Execution Plans using QEF (Query Evaluation Framework).
 
